refactor(library): upsert watch history per session, fix duplicate IDs, modernize toList()
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>